#BugFix: Wrong margin when timer is started

--- a/src/assets/styles/timer.css
+++ b/src/assets/styles/timer.css
@@ -10,7 +10,7 @@
 }
 
 .start-timer {
-    transform:  translate(0, 50vh);
+    transform:  translate(0, 46vh);
 }
 
 .idle-timer {
